0# Improved error logging in case type resolving issues.
Change-Id: Iff4f459a98884444c7c98c1596b0c68e4f23270c

--- a/wavemaker-commons-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-commons-util/src/main/resources/wm_resource.properties
@@ -387,8 +387,7 @@ com.wavemaker.platform.data$PkColLengGrtZero=Primary key column with "{0}" data 
 com.wavemaker.platform.data$PkColLengtLessTwoFiveFive=Primary key column with "{0}" data type length can not exceed 255 characters.
 
 com.wavemaker.platform.data$ColLenGrtZero="{0}" column with String data type length should not be NULL or 0.
-
-com.wavemaker.platform.data$InvalidSqlTypeParameter="No type mapping for SQLType "{0}" for given parameters".
+com.wavemaker.platform.data$InvalidSqlTypeParameter="No type mapping for SQLType "{0}" for given Length:{1}, Precision:{2}, Scale:{3}".
 
 com.wavemaker.platform.data$PrecisionOutOfBound="{0}" column with "{1}" data type precision is out of bound.
 
