Added new message resource for Entity not found
Change-Id: I3ec2a67ee57dfa089d7a53da94ebc5cf89030206
(cherry picked from commit ddf508c16bf3b1ff599042e56069091b219e8d7c)

--- a/wavemaker-commons-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-commons-util/src/main/resources/wm_resource.properties
@@ -594,6 +594,8 @@ com.wavemaker.studio.core.data$DataTruncationPossibility=Data loss will be occur
 
 com.wavemaker.runtime.data$DataIntegrityViolation= Data Integrity Constraint Violated: {0}
 
+com.wavemaker.runtime.data$EntityNotFound=No record found
+
 com.wavemaker.studio.core.data.helpers.SchemaUpdater$updateDBFailed= Error while updating database schema. Error :{0}
 
 com.wavemaker.runtime.data$RelationWithIdentityColumnNotPossible= SQL Server: Can't create Foreign key for column having IDENTITY generator
