Handling exceptions for invalid page/size/q in filter requests
Change-Id: I48d586924933fc6b86b68e13185f2ecbf144c324

--- a/wavemaker-commons-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-commons-util/src/main/resources/wm_resource.properties
@@ -389,6 +389,9 @@ com.wavemaker.platform.data$PkColLengtLessTwoFiveFive=Primary key column with "{
 com.wavemaker.platform.data$ColLenGrtZero="{0}" column with String data type length should not be NULL or 0.
 com.wavemaker.platform.data$InvalidSqlTypeParameter="No type mapping for SQLType "{0}" for given Length:{1}, Precision:{2}, Scale:{3}".
 
+com.wavemaker.runtime.data$InvalidSqlQuery=Invalid SQL Query
+com.wavemaker.runtime.data$InvalidInput="Invalid Input: "{0}"
+
 com.wavemaker.platform.data$PrecisionOutOfBound="{0}" column with "{1}" data type precision is out of bound.
 
 com.wavemaker.platform.deployment$UnknownDeploymentTarget=Unknown deployment target: "{0}"
