0# Added validations for queries and procedures w.r.t blob changes.
Change-Id: Iaf24dfbd2dcbe0ee4e7b974a0c7ddd3d6d90315b

--- a/wavemaker-commons-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-commons-util/src/main/resources/wm_resource.properties
@@ -392,7 +392,11 @@ com.wavemaker.platform.data$ColLenGrtZero="{0}" column with String data type len
 com.wavemaker.platform.data$InvalidSqlTypeParameter="No type mapping for SQLType "{0}" for given Length:{1}, Precision:{2}, Scale:{3}".
 
 com.wavemaker.runtime.data$InvalidSqlQuery=Invalid SQL Query
+
 com.wavemaker.runtime.data$InvalidInput="Invalid Input: "{0}"
+com.wavemaker.studio.core.data$OtherThanBlobResponse=In case of blob OUT parameter, no other parameter supported.
+com.wavemaker.studio.core.data$IdentifierNotSpecified=For paginated response returning blob fields identifier must be specified.
+com.wavemaker.studio.core.data$BlobResponseNotSupportedForHql=Blob response is not supported for hql queries.
 
 com.wavemaker.platform.data$PrecisionOutOfBound="{0}" column with "{1}" data type precision is out of bound.
 
