--- a/wavemaker-commons-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-commons-util/src/main/resources/wm_resource.properties
@@ -395,8 +395,9 @@ com.wavemaker.runtime.data$InvalidSqlQuery=Invalid SQL Query
 
 com.wavemaker.runtime.data$InvalidInput="Invalid Input: "{0}"
 com.wavemaker.studio.core.data$OtherThanBlobResponse=In case of blob OUT parameter, no other parameter supported.
-com.wavemaker.studio.core.data$IdentifierNotSpecified=For paginated response returning blob fields identifier must be specified.
+com.wavemaker.studio.core.data$IdentifierNotSpecified=Identifier must be specified for Queries returning blob fields.
 com.wavemaker.studio.core.data$BlobResponseNotSupportedForHql=Blob response is not supported for hql queries.
+com.wavemaker.studio.core.data$BlobInputOnlySupportedForInsertUpdateQueries=Blob input supported only for INSERT and UPDATE queries.
 
 com.wavemaker.platform.data$PrecisionOutOfBound="{0}" column with "{1}" data type precision is out of bound.
 
