1. Added the validation message for DefaultValue in case of invalid length 2. Changed the validation message in case of invalid precision and scale
Change-Id: I5cbba8083adc5ec28313e1e52d92d83e074530ef

--- a/wavemaker-commons-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-commons-util/src/main/resources/wm_resource.properties
@@ -620,11 +620,13 @@ com.wavemaker.studio.server$identityNotSupported = Unsupported Generator type Id
 
 com.wavemaker.studio.server$generatorNotSupported = Unsupported Generator type {0} at table {1}.
 
-com.wavemaker.studio.server$invalidPrecision = Precision value must be in range {0} and {1}
+com.wavemaker.studio.server$invalidPrecision = Precision value for {0} must be in range {1} and {2}
 
-com.wavemaker.studio.server$invalidScale = Scale value must be in range {0} and  {1}
+com.wavemaker.studio.server$invalidScale = Scale value for {0} must be in range {1} and  {2}
 
 com.wavemaker.studio.server$invalidDefaultValue = Invalid Default value is provided for column {0} in table {1}.
+
+com.wavemaker.studio.server$invalidDefaultValueLength = Default value length for column {0} in table {1} must not be > {2}.
 
 com.wavemaker.studio.server$unsupportedDefaultValue = Default value is not allowed for column {0} in table {1}.
 
