--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>com.wavemaker.commons</groupId>
     <artifactId>wavemaker-commons</artifactId>
-    <version>9.0.0</version>
+    <version>9.0.0-Beta</version>
 
     <packaging>pom</packaging>
 
