--- a/wavemaker-commons-util/pom.xml
+++ b/wavemaker-commons-util/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.wavemaker.commons</groupId>
         <artifactId>wavemaker-commons</artifactId>
-        <version>9.0.0</version>
+        <version>9.0.0-Beta</version>
     </parent>
 
     <artifactId>wavemaker-commons-util</artifactId>
