Added Semaphore wrapper class to handle timeouts and interrupted exceptions
Change-Id: I063b50cd347a35b917837bb3e81155aeebec6eb9
(cherry picked from commit e3bbeead86393157482f00bae7df7076cf237764)

--- a/wavemaker-commons-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-commons-util/src/main/resources/wm_resource.properties
@@ -238,6 +238,8 @@ com.wavemaker.commons.util$FileUtils_PathNotDir=Project path "{0}" is not a dire
 
 com.wavemaker.commons.util$FileUtils_ReachedRoot=Reached filesystem root "{0}" without finding root: "{1}"
 
+com.wavemaker.commons.util$SemaphoreAcquisitionTimeout=System is busy right now, please try again
+
 com.wavemaker.commons.util$NullClass=Class parameter was null
 
 com.wavemaker.platform.data$NoPrimaryKey=There must be at least one primary key column
