--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 
         <gson.version>2.2.4</gson.version>
 
-        <servlet.version>2.5</servlet.version>
+        <servlet.version>3.1.0</servlet.version>
         <jaxb.impl.version>2.2.5.1</jaxb.impl.version>
         <wavemaker-api-tools.version>2.19</wavemaker-api-tools.version>
     </properties>
@@ -71,7 +71,7 @@
             </dependency>
             <dependency>
                 <groupId>javax.servlet</groupId>
-                <artifactId>servlet-api</artifactId>
+                <artifactId>javax.servlet-api</artifactId>
                 <version>${servlet.version}</version>
                 <scope>provided</scope>
             </dependency>
