ConstraintValidator: Added Validation error messages for BasicConstraint and RefConstraint for validators in Database designer.
Change-Id: Ibfc5a6315eaccb48e54cfa88c5e8069dd155903b

--- a/wavemaker-commons-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-commons-util/src/main/resources/wm_resource.properties
@@ -640,3 +640,6 @@ com.wavemaker.studio.server$invalidConstraintType = UnSupported constraint type 
 
 com.wavemaker.studio.server$generatorValueEmpty = GeneratorValue cannot be empty for primary key at table {0}.
 
+com.wavemaker.studio.core$validatorValueEmpty = Value for {0} validator cannot be empty for {1} at table {2}.
+
+com.wavemaker.studio.core$RefConstraintEmpty = RefConstraint cannot be empty for {0} at table {1}.
