Javadoc Generation : Added maven-site plugin to generate javadoc.
Change-Id: I7ef6821ac206ed53f81d1d97396ae62953fec172

--- a/wavemaker-commons-util/pom.xml
+++ b/wavemaker-commons-util/pom.xml
@@ -12,7 +12,15 @@
     </parent>
 
     <artifactId>wavemaker-commons-util</artifactId>
+    <name>wavemaker-commons-util</name>
     <packaging>jar</packaging>
+
+    <distributionManagement>
+        <site>
+            <id>${project.artifactId}-site</id>
+            <url>./${project.artifactId}</url>
+        </site>
+    </distributionManagement>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
