--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,7 @@
         <commons.configuration2.version>2.2</commons.configuration2.version>
         <commons.collections.version>3.2.2</commons.collections.version>
 
-        <fasterxml.json.version>2.6.3</fasterxml.json.version>
-        <wm.jackson.databind.version>2.6.3.wm-1</wm.jackson.databind.version>
+        <fasterxml.json.version>2.9.7</fasterxml.json.version>
 
         <gson.version>2.2.4</gson.version>
 
@@ -113,7 +112,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${wm.jackson.databind.version}</version>
+                <version>${fasterxml.json.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
