--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,13 @@
 
         <commons.io.version>2.6</commons.io.version>
         <commons.codec.version>1.11</commons.codec.version>
-        <commons.lang3.version>3.7</commons.lang3.version>
-        <commons.configuration2.version>2.2</commons.configuration2.version>
-        <commons.collections.version>3.2.2</commons.collections.version>
+        <commons.lang3.version>3.8.1</commons.lang3.version>
+        <commons.configuration2.version>2.4</commons.configuration2.version>
+        <commons.collections.version>4.2</commons.collections.version>
 
-        <fasterxml.json.version>2.9.7</fasterxml.json.version>
+        <fasterxml.json.version>2.9.8</fasterxml.json.version>
 
-        <gson.version>2.2.4</gson.version>
+        <gson.version>2.8.5</gson.version>
 
         <servlet.version>3.1.0</servlet.version>
         <jaxb.impl.version>2.2.5.1</jaxb.impl.version>
@@ -96,7 +96,7 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
-                <artifactId>commons-collections</artifactId>
+                <artifactId>commons-collections4</artifactId>
                 <version>${commons.collections.version}</version>
             </dependency>
             <dependency>
