WaveMaker-0# AutoCommit from BuildMachine.
Change-Id: Ib9e25433e534cb3853cf99e30094a5dbde1563e4

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>com.wavemaker.commons</groupId>
     <artifactId>wavemaker-commons</artifactId>
-    <version>9.9.9</version>
+    <version>10.1.0.js</version>
     <name>wavemaker-commons</name>
     <packaging>pom</packaging>
 
