Handling job exceptions.
Change-Id: I63d0ffd69ca0524eb46952e2b23c42333407eaf6

--- a/wavemaker-commons-util/src/main/resources/wm_resource.properties
+++ b/wavemaker-commons-util/src/main/resources/wm_resource.properties
@@ -643,3 +643,7 @@ com.wavemaker.studio.server$generatorValueEmpty = GeneratorValue cannot be empty
 com.wavemaker.studio.core$validatorValueEmpty = Value for {0} validator cannot be empty for {1} at table {2}.
 
 com.wavemaker.studio.core$RefConstraintEmpty = RefConstraint cannot be empty for {0} at table {1}.
+
+com.wavemaker.runtime.jobs.already.exists = The task is already being performed in the background.
+
+com.wavemaker.runtime.jobs.submit.error = There was some internal error while performing the task.
