WaveMaker-0# AutoCommit from BuildMachine.
Change-Id: I85597c853cdebed72c33339308c60abb3e81a3c8

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>com.wavemaker.commons</groupId>
     <artifactId>wavemaker-commons</artifactId>
-    <version>10.2.1</version>
+    <version>10.2.1.ee</version>
     <name>wavemaker-commons</name>
     <packaging>pom</packaging>
 
