--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>com.wavemaker.commons</groupId>
     <artifactId>wavemaker-commons</artifactId>
-    <version>10.1.0.ma</version>
+    <version>9.9.9</version>
     <name>wavemaker-commons</name>
     <packaging>pom</packaging>
 
