WMS-18066 For RequestTagging and server timings using wavemaker-observability module.
    Deleting the RequestTracking logic from studio.

Change-Id: I65f5721b43e14d9d228ea979f065020b2235277d

--- a/wavemaker-commons-util/pom.xml
+++ b/wavemaker-commons-util/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>wavemaker-tools-apidocs-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.wavemaker</groupId>
+            <artifactId>wavemaker-observability</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
         </dependency>
