--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
                 <version>${wavemaker-api-tools.version}</version>
             </dependency>
             <dependency>
+                <groupId>com.wavemaker</groupId>
+                <artifactId>wavemaker-observability</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>javax.servlet</groupId>
                 <artifactId>javax.servlet-api</artifactId>
                 <version>${servlet.version}</version>
