--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
 .idea
 *.iml
 
-out/
-target/
-.settings/
-.project
-.classpath
-*.class
 *#*
 *~
 
-src/main/webapp/app/runtime/node_modules
-src/main/webapp/app/runtime/components
-src/main/webapp/app/runtime/dest
-src/main/webapp/app/runtime/tp
+wavemaker-commons-util/build/
+build/
