changed http: urls to https:
Change-Id: Ie4167ba947ba50fd1ca1bc26b935f73680e58250

--- a/wavemaker-commons-util/pom.xml
+++ b/wavemaker-commons-util/pom.xml
@@ -133,7 +133,7 @@
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
-            <url>http://s3.amazonaws.com/maven.wavemaker.com/release</url>
+            <url>https://s3.amazonaws.com/maven.wavemaker.com/release</url>
         </repository>
     </repositories>
 </project>
