--- a/pom.xml
+++ b/pom.xml
@@ -250,7 +250,7 @@
         <pluginRepository>
             <id>autoincrement-versions-maven-plugin</id>
             <name>autoincrement-versions-maven-plugin</name>
-            <url>http://autoincrement-versions-maven-plugin.googlecode.com/svn/repo</url>
+            <url>https://autoincrement-versions-maven-plugin.googlecode.com/svn/repo</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
