--- a/wavemaker-commons-util/pom.xml
+++ b/wavemaker-commons-util/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.wavemaker.commons</groupId>
         <artifactId>wavemaker-commons</artifactId>
-        <version>10.4.2</version>
+        <version>10.4.2.ee</version>
     </parent>
 
     <artifactId>wavemaker-commons-util</artifactId>
