--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,5 @@ target/
 *#*
 *~
 
-src/main/webapp/app/runtime/node_modules
-src/main/webapp/app/runtime/components
-src/main/webapp/app/runtime/dest
-src/main/webapp/app/runtime/tp
+build/
+wavemaker-commons-util/build/
